--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "custom-env": "^2.0.1",
+    "dotenv": "^12.0.4",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "sass": "^1.48.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
